--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body id="body" style="left: 159px; top: 71px;">
-<div class="draggable-element widget" style="left: 19px; top: 533px;">Gadget!<header>
+<div class="draggable-element widget" style="left: 19px; top: 533px;">Widget!<header>
 <div class="button close" title="Close">x</div>
 <div class="button" title="Open app">📂</div><div class="button last drag" title="Drag widget"></div></header></div>
-<div class="draggable-element widget" style="left: 20px; top: 360px;">Gadget!<header>
+<div class="draggable-element widget" style="left: 20px; top: 360px;">Widget!<header>
 <div class="button close" title="Close">x</div>
 <div class="button" title="Open app">📂</div><div class="button last drag" title="Drag widget"></div></header></div>
-<div class="draggable-element widget" style="left: 20px; top: 16px;">Gadget!<header>
+<div class="draggable-element widget" style="left: 20px; top: 16px;">Widget!<header>
 <div class="button close" title="Close">x</div><div class="button" title="Open app">📂</div>
 <div class="button last drag" title="Drag widget"></div></header></div>
-<div class="draggable-element widget" style="left: 21px; top: 180px;">Gadget!<header>
+<div class="draggable-element widget" style="left: 21px; top: 180px;">Widget!<header>
 <div class="button close" title="Close">x</div>
 <div class="button" title="Open app">📂</div><div class="button last drag" title="Drag widget"></div></header></div>
 <script src="script.js"></script>
